# thunar-nilfs2-plugin

./: .gitignore  Makefile.am  Makefile.in  README.md  configure.in.in
po/: POTFILES.in
thunar-plugin/: Makefile.am  nilfs2-page.c  nilfs2-page.h  nilfs2-plugin.c  nilfs2-provider.c  nilfs2-provider.h
